--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ READ THIS FOR SUCCESS IN LIFE AND THIS CODE CHALLENGE :: Copy and paste the code
   			padding: 0;
   			margin: 0;
   		}
-  		header, footer {
-  			text-align: center;
+  		header {
+        text-align: center;
   			background-color: #000;
   			color: #fff;
   			padding: 50px 0;
@@ -28,6 +28,25 @@ READ THIS FOR SUCCESS IN LIFE AND THIS CODE CHALLENGE :: Copy and paste the code
   			width: 80%;
   			margin: 50px auto;
   		}
+      .right {
+        float: right;
+        width: 50%;
+      }
+      .left {
+        float: left;
+        width: 50%;
+      }
+      img {
+        width: 100%;
+      }
+      footer {
+        text-align: center;
+        background-color: #000;
+        color: #fff;
+      }
+      .clear {
+        clear: both;
+      }
   	</style>
 
   </head>
